--- a/src/main/resources/twitter4j.properties
+++ b/src/main/resources/twitter4j.properties
@@ -2,7 +2,7 @@
 
 #set oauth parameters to obtain Twitter's API access
 #http://twitter4j.org/en/code-examples.html#oauth
-oauth.consumerSecret=
-oauth.accessToken=
-oauth.accessTokenSecret=
-oauth.consumerKey=
+oauth.consumerSecret=uMd1Yp1wzOdPMq3alToOZD5fU
+oauth.accessToken=V15fjVTpohnYkAC8yd5m2KQGxafDeCiZIxpIKwAblrzolj2x9M
+oauth.accessTokenSecret=5tMmmWlJygWB1S5Q1fd0fsFFaeZwMeyde6upHF5nI
+oauth.consumerKey=uMd1Yp1wzOdPMq3alToOZD5fU
